<resources>
    <string name="app_name">SWAPISearcher</string>
    <string name="Star_Wars">Star Wars</string>
    <string name="loading_error_message">Woops.  We couldn\'t load your SWAPI Search.  Check your internet connection and try again.</string>
    <string name="action_share">Share SWAPI</string>
    <string name="action_location">Show SWAPI location</string>
    <string name="action_settings">Settings</string>
    <string name="share_chooser_title">Pick an app to share this</string>
    <string name="share_repo_text">%1$s: %2$s</string>
    <string name="action_view_on_web">Search on Wookiepedia</string>


    <string name="pref_cata_key">pref_cata</string>
    <string name="pref_cata_title">Category</string>
    <string name="pref_cata_dir">Choose a Category:</string>
    <string name="pref_cata_default">People</string>

    <string name="pref_key">pref</string>
    <string name="pref_title">Measurement Units</string>
    <string name="pref_dir">Choose a unit of Height Measurement:</string>
    <string name="pref_default">Metric</string>

    <string name="pref_Lang_key">pref_lang</string>
    <string name="pref_Lang_title">Language</string>
    <string name="pref_Lang_dir">Choose a Language:</string>
    <string name="pref_Lang_default">Common</string>
</resources>
