<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_cata_key"
        android:title="@string/pref_cata_title"
        android:summary="%s"
        android:dialogTitle="@string/pref_cata_dir"
        android:entries="@array/pref_categ"
        android:entryValues="@array/pref_categ2"
        android:defaultValue="@string/pref_cata_default" />

    <ListPreference
        android:key="@string/pref_key"
        android:title="@string/pref_title"
        android:summary="%s"
        android:dialogTitle="@string/pref_dir"
        android:entries="@array/pref_units"
        android:entryValues="@array/pref_units2"
        android:defaultValue="@string/pref_default" />

    <ListPreference
        android:key="@string/pref_Lang_key"
        android:title="@string/pref_Lang_title"
        android:summary="%s"
        android:dialogTitle="@string/pref_Lang_dir"
        android:entries="@array/pref_lang"
        android:entryValues="@array/pref_lang2"
        android:defaultValue="@string/pref_Lang_default" />
</PreferenceScreen>